# crates/server/src/account_http/tests.rs
@@ -1375,3 +1375,5 @@ mod tables;
 mod transfer;
 
 mod rows;
+
+mod migrations;
